# tessellate

./: .gitignore  404.html  CONTRIBUTING.html  Cargo.toml  LICENSE.html  README.md  attributes.html  auxiliary.html  basic_geometries.html  boolean_operations.html  bsptree.html  connectivity.html  controls.html  distance.html  extract_cell_centers.html  extract_edges.html  import.html  index.html  kdtree.html  mesh.html  mesh_filtering.html  mesh_manipul.html  obj.html  options.html  parametric_geometric_objects.html  parts.html  ply.html  print.html  properties.html  query.html  rustfmt.toml  searchindex.js  searchindex.json  start.html  stl.html  subdivide_cells.html  toc.html  toc.js  visualization.html
docs/: book.toml
docs/book/: 404.html  CONTRIBUTING.html  LICENSE.html  attributes.html  auxiliary.html  basic_geometries.html  boolean_operations.html  bsptree.html  clipping.html  collision_detection.html  connected_regions.html  connectivity.html  controls.html  curvature.html  decimate_mesh.html  distance.html  explicit_structured_grid.html  extract_cell_centers.html  extract_edges.html  extract_surface.html  gaussian_smoothing.html  geodesic_paths.html  gradient.html  import.html  index.html  interpolating.html  intro.html  kdtree.html  laplacian_smoothing.html  mesh.html  mesh_filtering.html  mesh_manipul.html  mesh_quality.html  moeller_trumbore.html  obj.html  options.html  parametric_geometric_objects.html  parts.html  platonic_solids.html  ply.html  (+24 more)
docs/src/: SUMMARY.md  attributes.md  auxiliary.md  base_elements.md  basic_geometries.md  bsptree.md  clipping.md  collision_detection.md  connected_regions.md  connectivity.md  controls.md  curvature.md  decimate_mesh.md  distance.md  explicit_structured_grid.md  extract_cell_centers.md  extract_edges.md  extract_surface.md  gaussian_smoothing.md  geodesic_paths.md  import.md  interpolating.md  intro.md  kdtree.md  laplacian_smoothing.md  mesh.md  mesh_manipul.md  mesh_quality.md  obj.md  options.md  parametric_geometric_objects.md  parts.md  platonic_solids.md  ply.md  point_cloud.md  properties.md  quantities.md  query.md  ray_casting.md  ray_tracing.md  (+13 more)
example-wgpu/: Cargo.toml  LICENSE
example-wgpu/src/: lib.rs
examples/: Cargo.toml
examples/basic_shapes/: README.md  main.rs
examples/boolean_ops/: README.md  main.rs
examples/connectivity/: README.md  main.rs
examples/distance/: README.md  main.rs
examples/extract_edges/: README.md  main.rs
examples/import_models/: README.md  at_t_building.stl  main.rs
examples/parametric_shapes/: README.md  main.rs
examples/polygon_and_edges_centers/: README.md  main.rs
examples/polygons/: main.rs
examples/sandbox/: main.rs
examples/src/: basic.rs  lib.rs  main.rs
examples/sskd_tree/: README.md  main.rs
examples/sskdtree/: main.rs
examples/subdivide_cells/: README.md  main.rs
src/: files.rs  gpu.rs  lib.rs  main.rs  mesh.rs
src/files/: obj.rs  ply.rs  stl.rs
src/gpu/: camera.rs  error.rs  gui.rs  initializer.rs  instance.rs  light.rs  material.rs  options.rs  processor.rs  runner.rs  shader.wgsl  state.rs  vertex.rs
src/gpu/camera/: controller.rs  coordinator.rs  mouse.rs  position.rs  projection.rs  utils.rs
src/gpu/gui/: camera_info.rs  controls.rs  widgets.rs
src/gpu/processor/: init.rs  logic.rs  render.rs
src/gpu/wgsl/: light.wgsl  shader.wgsl  shader_vertex.wgsl
src/mesh/: attributes.rs  bool.rs  distance.rs  material.rs  normals.rs  parts.rs  primitives.rs  properties.rs  query.rs  shape.rs  subdivision.rs  tables.rs  transform.rs
src/mesh/bool/: Readme.md  analyzer.rs  bsp.rs  dsc.md  dsu.rs  ember.rs  intersections.rs  kdtree.rs  readme.md  split_poly.rs  sskdtree.rs
src/mesh/parts/: bbox.rs  edge.rs  face.rs  macro.rs  plane.rs  polygon.rs  ray.rs  vertex.rs
src/mesh/primitives/: cuboid.rs
src/mesh/query/: bsp.rs  connectivity.rs  edges.rs  kdtree.rs  octree.rs  sskdtree.rs
trimesh/: sandbox.py
(+43 files in other folders)
