[package]
name = "tessellate"
description = "3D scientific data visualization and plotting in Rust"
version = "0.1.0"
edition = "2021"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
license-file = "LICENSE"
keywords = ["visualization", "science", "geometry", "graphics", ]
homepage = "https://github.com/besok/tessellate"
repository = "https://github.com/besok/tessellate"
categories= ["algorithms", "science" ]

[dependencies]
glam= "0.28.0"
cfg-if = "1.0.0"
winit = { version = "0.30.3", features = ["rwh_05"] }
env_logger = "0.11.3"
log = "0.4"
wgpu = "0.20.1"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
instant = "0.1.13"
rand = "0.9.0-alpha.1"
tobj = "4.0.2"
#tobj = {path = "../tobj"}
ply-rs = "0.1.3"
stl_io = "0.8.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

